feat: add room status endpoints and enhance storage management with orphan directory cleanup